<resources>
    <string name="locate">en</string>
    <string name="google_maps_key">AIzaSyBLE_7DppPj3SijWsQli3ja-hnYb8k7cuc</string>
    <!-- Common -->
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="no_data_available">No data available</string>
    <string name="msg_error_time_out">Connection timeout!</string>
    <string name="msg_error_no_internet">Not connect internet!</string>
    <string name="msg_error_data_parse">Parse data error!</string>

    <!-- Date -->
    <string name="format_date_mm_dd_yyyy">MM/dd/yyyy</string>
    <string name="format_date_mm_dd_yyyy_hh_mm">MM-dd-yyyy HH:mm</string>

    <!-- Menu container-->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="notification">Notification</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="skip_intro">Skip intro</string>
    <string name="next">Next</string>
    <string name="lus">Lus</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_to_lus">Welcome to Lus</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="full_name">Full name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="you_will_get_a_otp_via_email">You will get a OTP via Email</string>
    <string name="verification">Verification</string>
    <string name="verify_email_success">Verify email success!</string>
    <string name="idol_address">Home town is %1$s</string>
    <string name="live_in">Live in %1$s</string>
    <string name="nick_name">%1$s, %2$s</string>
    <string name="crush_national_citizen">Crush National Citizen</string>
    <string name="to_rent">To rent</string>
    <string name="service">Service</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="ok">OK</string>
    <string name="ok2">Continue</string>
    <string name="start_date">Start Date</string>
    <string name="note">Note</string>
    <string name="add_note">Add note…</string>
    <string name="add_service">Add service</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="edit_service">Edit service</string>
    <string name="invalid">Invalid</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rent">Rent</string>
    <string name="are_you_sure_to_rent">Are you sure to rent?</string>
    <string name="add_more_coin">You don\'t have enough coins. Let\'s add coins!</string>
    <string name="present_to">Give gifts to %1$s</string>
    <string name="choose_a_gift_to_impress">Choose a gift to impress</string>
    <string name="search_on_Lus">Search on Lus</string>
    <string name="new_idol_request">List of idols found</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="follow">Follow</string>
    <string name="send_message">Send message…</string>
    <string name="please_enter_your_message">Please enter your message!</string>
    <string name="please_enter_your_price">Please enter your coin!</string>
    <string name="menu">Menu</string>
    <string name="setting">Setting</string>
    <string name="see_your_profile_page">See your profile page</string>
    <string name="see_more">See more</string>
    <string name="help_and_support">Help &amp; support</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log out</string>
    <string name="wallet">Wallet</string>
    <string name="gallery">Image Gallery</string>
    <string name="bill">Bill</string>
    <string name="history">History</string>
    <string name="history_idol">History of Idol</string>
    <string name="add_coin">Add coin</string>
    <string name="invite_friends">Invite friends</string>
    <string name="feedback">Feedback</string>
    <string name="success">Success</string>
    <string name="register_success">Register success!</string>
    <string name="edit_idol_profile">Edit idol profile</string>
    <string name="register_idol">Register Idol</string>
    <string name="input_coin">Input coin…</string>
    <string name="information_idol">Information Idol</string>
    <string name="location">Location</string>
    <string name="service_idol">Service Idol</string>
    <string name="image_gallery">Image Gallery</string>
    <string name="hot_idol">Hot Idol</string>
    <string name="recommend_for_you">Recommend for you</string>
    <string name="nickname">Nickname</string>
    <string name="relationship">Relationship (Alone,..)</string>
    <string name="introduce_yourself">Introduce yourself</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="card_number">Card number</string>
    <string name="expire_date_mm_yy">Expire date (MM/yy)</string>
    <string name="cvc">CVC</string>
    <string name="check_wallet">Not enough coins. Please add Coins to your account.</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="approve">Approve</string>
    <string name="rejected">Rejected</string>
    <string name="finished">Finished</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="find_idol">Find Idol</string>
    <string name="start_time_output">Start time: %1$s</string>
    <string name="address_output">Address: %1$s</string>
    <string name="note_output">Note: %1$s</string>
    <string name="total_output">Total: %1$s</string>
</resources>
