<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/selector_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/selector_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/selector_heart"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/notification"
        android:icon="@drawable/selector_notification"
        android:title="@string/notification"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/selector_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>
