<?xml version="1.0" encoding="utf-8" ?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.vtnd.lus.ui.auth.welcome.WelcomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_welcome_top"
            app:layout_constraintDimensionRatio="w,294:252"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.28" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:text="@string/welcome_to_lus"
            android:textAllCaps="true"
            android:textColor="@color/grey_900"
            android:textSize="@dimen/sp_12"
            app:fontFamily="@font/segoe_ui_semibold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/welcomeImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_welcome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="w,420:380"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintWidth_percent="0.8" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeBottomImage"
            app:layout_constraintWidth_percent="0.7">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_4"
                android:backgroundTint="@color/red_a400"
                android:paddingVertical="@dimen/dp_10"
                android:text="@string/login"
                android:textColor="@color/white"
                app:fontFamily="@font/segoe_ui_semibold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_4"
                android:backgroundTint="@color/pink_50"
                android:paddingVertical="@dimen/dp_10"
                android:text="@string/register"
                android:textColor="@color/grey_900"
                app:fontFamily="@font/segoe_ui_regular" />
        </LinearLayout>

        <ImageView
            android:id="@+id/welcomeBottomImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_welcome_bottom"
            app:layout_constraintBottom_toBottomOf="@+id/welcomeImage"
            app:layout_constraintDimensionRatio="w,222:150"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeImage"
            app:layout_constraintWidth_percent="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
