<?xml version="1.0" encoding="utf-8" ?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.vtnd.lus.ui.auth.login.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_welcome_top"
                android:backgroundTint="@color/pink_50"
                app:layout_constraintDimensionRatio="w,294:252"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.28" />

            <TextView
                android:id="@+id/titleLoginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_34"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/grey_900"
                android:textSize="@dimen/sp_12"
                app:fontFamily="@font/segoe_ui_semibold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/skipText"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/dp_34"
                android:background="@drawable/ic_arrow_right_circle"
                app:elevation="@dimen/dp_8"
                app:layout_constraintBottom_toBottomOf="@+id/titleLoginText"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/titleLoginText"
                app:layout_constraintWidth_percent="0.13" />

            <ImageView
                android:id="@+id/loginImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/ic_login"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleLoginText"
                app:layout_constraintWidth_percent="0.7" />

            <ScrollView
                android:id="@+id/inputScrollView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginImage"
                app:layout_constraintWidth_percent="0.7">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:startIconDrawable="@drawable/ic_profile_bold"
                        app:startIconTint="@color/red_a400">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxLength="50"
                            android:singleLine="true"
                            android:background="@color/pink_50"
                            android:hint="@string/email" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:passwordToggleEnabled="true"
                        app:startIconDrawable="@drawable/ic_lock"
                        app:startIconTint="@color/red_a400">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/pink_50"
                            android:maxLength="30"
                            android:singleLine="true"
                            android:hint="@string/password"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/loginButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/red_a400"
                            android:paddingVertical="@dimen/dp_12"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            app:cornerRadius="@dimen/dp_24"
                            app:fontFamily="@font/segoe_ui_semibold"
                            app:rippleColor="@color/pink_50" />

                        <ProgressBar
                            android:id="@+id/progress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:elevation="@dimen/dp_2"
                            android:indeterminateTint="@color/purple_200"
                            android:visibility="invisible" />
                    </FrameLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dp_8"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/don_t_have_an_account"
                            android:textColor="@color/grey_600"
                            app:fontFamily="@font/segoe_ui_semibold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/signUpText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_8"
                            android:gravity="center"
                            android:text="@string/sign_up"
                            android:textColor="@color/grey_600"
                            app:fontFamily="@font/segoe_ui_bold" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

            <ImageView
                android:id="@+id/loginBottomImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_login"
                android:backgroundTint="@color/pink_50"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="w,236:316"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputScrollView"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintWidth_percent="0.3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
