<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.vtnd.lus.ui.main.container.addCard.AddCoinViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addCoinLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/layout_toolbar_base" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutToolbarBase">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cardImage"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/mastercard"
                    app:layout_constraintBottom_toTopOf="@+id/edit_holder_name"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_holder_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:hint="@string/card_holder_name"
                    app:endIconMode="none"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@null"
                    app:errorTextColor="@color/red_a400"
                    app:helperTextEnabled="false"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:layout_constraintBottom_toTopOf="@+id/edit_card_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardImage"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:startIconDrawable="@drawable/ic_person"
                    app:startIconTint="@color/red_a400">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/pink_50"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_card_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:hint="@string/card_number"
                    app:counterEnabled="true"
                    app:counterMaxLength="16"
                    app:endIconMode="none"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@null"
                    app:errorTextColor="@color/red_a400"
                    app:helperTextEnabled="false"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:layout_constraintBottom_toTopOf="@+id/edit_expired_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_holder_name"
                    app:startIconDrawable="@drawable/ic_payment"
                    app:startIconTint="@color/red_a400">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/pink_50"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="16"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_expired_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:hint="@string/expire_date_mm_yy"
                    app:endIconMode="none"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@null"
                    app:errorTextColor="@color/red_a400"
                    app:helperTextEnabled="false"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:layout_constraintBottom_toTopOf="@+id/edit_cvc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_card_number"
                    app:startIconDrawable="@drawable/ic_date_range"
                    app:startIconTint="@color/red_a400">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/pink_50"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_cvc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:hint="@string/cvc"
                    app:counterEnabled="true"
                    app:counterMaxLength="3"
                    app:endIconMode="none"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@null"
                    app:errorTextColor="@color/red_a400"
                    app:helperTextEnabled="false"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:layout_constraintBottom_toTopOf="@+id/edit_coin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_expired_date"
                    app:startIconDrawable="@drawable/ic_security"
                    app:startIconTint="@color/red_a400">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/pink_50"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="3"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_coin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:hint="@string/input_coin"
                    app:counterEnabled="true"
                    app:counterMaxLength="7"
                    app:endIconMode="none"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@null"
                    app:errorTextColor="@color/red_a400"
                    app:helperTextEnabled="false"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:layout_constraintBottom_toTopOf="@+id/button_add"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_cvc"
                    app:startIconDrawable="@drawable/ic_heart_bold"
                    app:startIconTint="@color/orange_400">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/pink_50"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="7"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:paddingStart="@dimen/dp_24"
                    android:paddingTop="@dimen/dp_14"
                    android:paddingEnd="@dimen/dp_24"
                    android:paddingBottom="@dimen/dp_14"
                    android:text="@string/add_coin"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:cornerRadius="@dimen/dp_6"
                    app:elevation="@dimen/dp_12"
                    app:fontFamily="@font/segoe_ui_semibold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_coin" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@id/button_add"
                    app:layout_constraintEnd_toEndOf="@id/button_add"
                    app:layout_constraintStart_toStartOf="@id/button_add"
                    app:layout_constraintTop_toTopOf="@id/button_add" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
